--- a/simothing_out_of_box/bton.html
+++ b/simothing_out_of_box/bton.html
@@ -1,3 +1,5 @@
+<!--this is an animated button having some basic transision animation done using jquery-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
